--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -62,7 +62,7 @@
 }
 .card {
   max-width: 87.5vw;
-  max-height: 43.25vh;
+  max-height:calc(100vh - 112.9px);
   position: relative;
   display: flex;
   background-color: antiquewhite;
@@ -124,4 +124,7 @@
   overflow: scroll;
   }
 } */
-
+.SignUp{
+  height:1000px;
+  width:100%;
+}
