--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -11,6 +11,7 @@
   position: relative;
 }
 .container{
+  width: 100vw;
   display: inline-flex;
 }
 .content{
@@ -61,9 +62,10 @@
   border-radius: 20px;
 }
 .card {
-  max-width: 87.5vw;
+  max-width: 100vw;
   max-height:calc(100vh - 112.9px);
   position: relative;
+  left: 38vw;
   /* display: flex; */
   background-color: antiquewhite;
   margin: 15px;
