--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -6,13 +6,23 @@
   font-family: "Quicksand";
   color: #333;
 }
-.App{
-  background-color: wheat;
+.Login{
   position: relative;
 }
 .container{
-  width: 100vw;
-  display: inline-flex;
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
+.App{
+  height: 100%;
+  background-color: wheat;
+  align-items: center;
+  justify-content: center;
+  position: flex;
 }
 .content{
   overflow: hidden;
@@ -63,9 +73,8 @@
 }
 .card {
   width: 90%;
- height:90%;
-  position: relative;
-  /* display: flex; */
+  height:90%;
+  position: flex;
   background-color: antiquewhite;
   margin: 15px;
   padding: 20px;
@@ -100,6 +109,7 @@
 }
 .sidebar{
   padding: 20px;
+  width: 17.5vw;
   display: flex;
   flex-direction: column;
 }
