--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -11,9 +11,10 @@
 }
 .container{
   width: 100%;
-  height: 100vh;
-  align-items: center;
-  justify-content: center;
+  height: 95vh;
+  /* align-items: center;
+  justify-content: center; */
+  /* flex-direction: column; */
   display: flex;
 }
 
@@ -58,6 +59,12 @@
   color: #f1356d;
 }
 .navbar .links {
+  font-size: 10px;
+  font-weight: bold;
+  padding-left: 5px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
   margin-left: auto;
 }
 .navbar a {
@@ -71,8 +78,11 @@
   box-shadow: 1px 3px 5px rgba(0,0,0,0.3);
   border-radius: 20px;
 }
+.space{
+  width: 25vw;
+}
 .card {
-  width: 90%;
+  width: 100%;
   height:90%;
   position: flex;
   background-color: antiquewhite;
@@ -99,8 +109,8 @@
   display: flex;
   float: left;
   background-color: antiquewhite;
-  max-width: 175px;
-  height: calc(100vh - 112.9px);
+  max-width: 200px;
+  height: calc(100vh - 90px);
   position: relative;
   top: 0;
   left: 0;
@@ -108,10 +118,12 @@
   bottom: 0;
 }
 .sidebar{
-  padding: 20px;
-  width: 17.5vw;
-  display: flex;
   flex-direction: column;
+  padding: 20px;
+  align-items: center;
+  justify-content: center;
+  /* width: 17.5vw; */
+  display: flex;
 }
 .sidebar a {
   text-decoration: none;
