--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -12,15 +12,17 @@
 .container{
   width: 100%;
   height: 95vh;
+  overflow: hidden;
   /* align-items: center;
   justify-content: center; */
   /* flex-direction: column; */
-  display: flex;
+  display: inline-flex;
 }
 
 .App{
   height: 100%;
   background-color: wheat;
+  background-size: cover;
   align-items: center;
   justify-content: center;
   position: flex;
@@ -108,9 +110,10 @@
   padding: 20px;
   display: flex;
   float: left;
+  overflow: hidden;
   background-color: antiquewhite;
   max-width: 225px;
-  height: calc(100vh - 105px);
+  /* height: calc(100vh - 105px); */
   position: relative;
   top: 0;
   left: 0;
@@ -142,9 +145,11 @@
   justify-content: center;
   border-bottom: 1.5px solid #333;
 }
-/* @media only screen and (max-width: 1530px) {
-  .content{
-  overflow: scroll;
+/* @media only screen and (max-width: 300px) {
+  .container{
+  width: 100%;
+  height: 50vh;
+  display: inline-flex;
   }
 } */
 .SignUp{
