--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -6,6 +6,10 @@
   font-family: "Quicksand";
   color: #333;
 }
+a{
+  font-size: 15px;
+  font-weight: bold;
+}
 .Login{
   position: relative;
 }
@@ -13,9 +17,6 @@
   width: 100%;
   height: 95vh;
   overflow: hidden;
-  /* align-items: center;
-  justify-content: center; */
-  /* flex-direction: column; */
   display: inline-flex;
 }
 
@@ -113,7 +114,6 @@
   overflow: hidden;
   background-color: antiquewhite;
   max-width: 225px;
-  /* height: calc(100vh - 105px); */
   position: relative;
   top: 0;
   left: 0;
@@ -123,9 +123,6 @@
 .sidebar{
   flex-direction: column;
   padding: 20px;
-  align-items: center;
-  justify-content: center;
-  /* width: 17.5vw; */
   display: flex;
 }
 .sidebar a {
@@ -145,13 +142,6 @@
   justify-content: center;
   border-bottom: 1.5px solid #333;
 }
-/* @media only screen and (max-width: 300px) {
-  .container{
-  width: 100%;
-  height: 50vh;
-  display: inline-flex;
-  }
-} */
 .SignUp{
   height:1000px;
   width:100%;
@@ -214,3 +204,12 @@
   border: 1px solid #999;
   font-size: 20px;
 }
+
+
+/* @media only screen and (max-width: 300px) {
+  .container{
+  width: 100%;
+  height: 50vh;
+  display: inline-flex;
+  }
+} */
