--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -6,8 +6,11 @@
   font-family: "Quicksand";
   color: #333;
 }
+p{
+  font-size: 1vw;
+}
 a{
-  font-size: 15px;
+  font-size: 1vw;
   font-weight: bold;
 }
 .Login{
@@ -32,6 +35,7 @@ a{
   overflow: hidden;
 }
 .button{
+  font-size: 1vw;
   width: 8vw;
   height: 3vh;
   font-weight: bold;
@@ -41,6 +45,7 @@ a{
 .middle{
   width: 8vw;
   height: 3vh;
+  font-size: 1vw;
   font-weight: bold;
   box-shadow: 1px 3px 5px rgba(0,0,0,0.3);
   border-radius: 20px;
@@ -68,7 +73,7 @@ a{
   color: #D2D4DA;
 }
 .navbar .links {
-  font-size: 10px;
+  font-size: 1.5vw;
   font-weight: bold;
   padding-left: 5px;
   align-items: center;
@@ -79,7 +84,7 @@ a{
 .navbar a {
   margin-left: 16px;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 1vw;
   padding: 6px;
 }
 .navbar a:hover {
@@ -89,6 +94,9 @@ a{
 }
 .space{
   width: 25vw;
+}
+h2{
+  font-size: 2vw;
 }
 .card {
   width: 100%;
@@ -118,8 +126,8 @@ a{
   display: flex;
   float: left;
   overflow: hidden;
+  width: 15vw;
   background-color: #B3B5BD;
-  max-width: 225px;
   position: relative;
   top: 0;
   left: 0;
@@ -134,7 +142,7 @@ a{
 .sidebar a {
   text-decoration: none;
   margin-top: 20px;
-  font-size: 20px;
+  font-size: 1.15vw;
   font-weight: bold;
   padding: 5px;
 }
@@ -167,7 +175,7 @@ a{
 }
 /* CreateOfferPage*/
 .CreateOfferPage{
- width: 100%;
+  width: 100%;
   height: 100%;
 }
 
@@ -213,10 +221,10 @@ a{
 
 .styled-table {
   border-collapse: collapse;
-  margin: 25px 0;
+  margin: 2.5vw 0;
   font-size: 1.1em;
   font-family: sans-serif;
-  min-width: 400px;
+  min-width: 25vw;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 .styled-table thead tr {
@@ -226,7 +234,7 @@ a{
 }
 .styled-table th,
 .styled-table td {
-    padding: 12px 15px;
+    padding: 1.15vw 1.2vw;
 }
 .styled-table tbody tr {
   border-bottom: 1px solid #dddddd;
