--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -251,10 +251,38 @@ h2{
   font-weight: bold;
   color: #9496A1;
 }
-/* @media only screen and (max-width: 300px) {
-  .container{
-  width: 100%;
-  height: 50vh;
-  display: inline-flex;
+@media only screen and (max-width: 800px) {
+  p{
+    font-size: 2.5vw;
   }
-} */
+  a{
+    font-size: 2.5vw;
+    font-weight: bold;
+  }
+  .button{
+    font-size: 2vw;
+    width: 8vw;
+    height: 3vh;
+    font-weight: bold;
+    box-shadow: 1px 3px 5px rgba(0,0,0,0.3);
+    border-radius: 20px;
+  }
+  .middle{
+    width: 8vw;
+    height: 3vh;
+    font-size: 2vw;
+    font-weight: bold;
+    box-shadow: 1px 3px 5px rgba(0,0,0,0.3);
+    border-radius: 20px;
+  }
+  h2{
+    font-size: 4vw;
+  }
+  .sidebar a {
+    text-decoration: none;
+    margin-top: 20px;
+    font-size: 2.5vw;
+    font-weight: bold;
+    padding: 5px;
+  }
+}
