--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -22,7 +22,10 @@ a{
   overflow: hidden;
   display: inline-flex;
 }
-
+.message{
+  border-style: dashed;
+  width: fit-content;
+}
 .App{
   height: 100%;
   background-color: #ECE9E9;
