--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -319,7 +319,16 @@ h2{
   label{
     border-style:groove;
     margin: 0.2vh;
-    /* border-bottom: 1.5px solid #333; */
     font-size: 1.75vw;
+  }
+  .card {
+    width: 100%;
+    height:90%;
+    position: flex;
+    background-color: #D3DCDE;
+    margin: 15px;
+    padding: 20px;
+    border-radius: 25px;
+    overflow: scroll;
   }
 }
